--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,5 @@
-PORT = 3000
-MONGODB_URL = mongodb://localhost:27017/
-DATABASE_NAME= stylesphere
+PORT=3000
+MONGODB_URL="mongodb://localhost:27017/"
+DATABASE_NAME="stylesphere"
+
+JWT_PRIVATE_KEY="privatekey"
